2009-02-24  Tobias C. Rittweiler  <tcr@freebits.de>

	Re-checkin my change from 2009-02-14. It seems I didn't actually
	commit it.

2009-02-22  Tobias C. Rittweiler  <tcr@freebits.de>

        `M-x slime-format-string-expand' displays the expansion of a
        format string.

        * slime.el (slime-string-at-point) New.
        (slime-string-at-point-or-error): New.
        (slime-format-string-expand): New; use them.

        * swank-backend.lisp (format-string-expand): New interface.
        * swank.lisp (swank-format-string-expand): New; use it.

2009-02-17  Helmut Eller  <heller@common-lisp.net>

	* swank.lisp (dispatch-event [:emacs-rex]): Reply a :invalid-rpc
	message if the specified thread doesn't exist.
	* slime.el (slime-dispatch-event): Handle :invalid-rpc.
	(slime-init-connection-state): Bind slime-current-thread
	to avoid problems with dead threads.

2009-02-14  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime.el (slime-reader-conditionals-regexp): New variable. Taken
	from `slime-forward-reader-conditional'.
	(slime-pretty-package-name): Fix modeline display for buffer
	containing forms like (in-package "#+foo :A #-foo :B"). Also do
	not call `read' on the name; the function does not need to return
	a symbol, and `read' may choke on non-elisp syntax.

2009-02-14  Helmut Eller  <heller@common-lisp.net>

	Don't signal conditions in interrupt handler to
	avoid problems with naive code like
	 (handler-case foo (condition bar))

	* swank-backend.lisp (*interrupt-queued-handler*): Use a dynamic
	variable instead.
	(slime-interrupt-queued): Deleted.
	* swank-cmucl.lisp, swank.lisp: Ditto.

2009-02-14  Helmut Eller  <heller@common-lisp.net>

	* slime.el (slime-restart-or-init-modeline-update-timer): Don't
	run the timer repeatedly.
	(slime-change-directory): Also change the directory in the
	connection-buffer.

2009-02-11  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime.el (slime-current-tlf, slime-current-form-path): New